Address review feedback
Signed-off-by: Mark Hilbush <mark@hilbush.com>